--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -97,7 +97,7 @@ ul.bxslider {
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev {
   left: 10px;
-  background: url('/imgs/controls.png') no-repeat 0 -32px;
+  background: url('https://github.com/amrbaligh/test/blob/master/imgs/controls.png?raw=true') no-repeat 0 -32px;
 }
 .bx-wrapper .bx-prev:hover,
 .bx-wrapper .bx-prev:focus {
@@ -105,7 +105,7 @@ ul.bxslider {
 }
 .bx-wrapper .bx-next {
   right: 10px;
-  background: url('/imgs/controls.png') no-repeat -43px -32px;
+  background: url('https://github.com/amrbaligh/test/blob/master/imgs/controls.png?raw=true') no-repeat -43px -32px;
 }
 .bx-wrapper .bx-next:hover,
 .bx-wrapper .bx-next:focus {
@@ -134,7 +134,7 @@ ul.bxslider {
   width: 10px;
   height: 11px;
   outline: 0;
-  background: url('images/controls.png') -86px -11px no-repeat;
+  background: url('https://github.com/amrbaligh/test/blob/master/imgs/controls.png?raw=true') -86px -11px no-repeat;
   margin: 0 3px;
 }
 .bx-wrapper .bx-controls-auto .bx-start:hover,
@@ -148,7 +148,7 @@ ul.bxslider {
   width: 9px;
   height: 11px;
   outline: 0;
-  background: url('images/controls.png') -86px -44px no-repeat;
+  background: url('https://github.com/amrbaligh/test/blob/master/imgs/controls.png?raw=true') -86px -44px no-repeat;
   margin: 0 3px;
 }
 .bx-wrapper .bx-controls-auto .bx-stop:hover,
