--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body{
 }
 
 .shadow-slider {
-    height: 100%;
+    height: 2000px;
     width: 21vw;
     background-color: #373636d9;
     position: fixed;
